# gesis_surf_backend

./: .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.deploy.yaml  docker-compose.staging.yaml  docker-compose.yaml  entity_relationship_diagram.drawio  env.sample  pyproject.toml  requirements.dev.txt  requirements.txt
app/: .coveragerc  .flake8  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt  settings.py
app/app/: __init__.py  celery.py  settings.py  urls.py
app/app/middleware/: security_middleware.py  traffic_middleware.py
app/app/security/: pattern_loader.py
app/app/tests/: test_middleware.py  test_security_middleware.py
app/clicks/: apps.py  serializers.py  urls.py  views.py
app/clicks/tests/: test_clicks_api.py
app/core/: admin.py  apps.py  models.py  pagination.py  signals.py  tasks.py
app/core/migrations/: 0001_initial.py  0002_alter_window_window_num.py  0002_remove_wave_users_user_waves.py  0002_rename_clent_id_wave_client_id.py  0002_tab.py  0002_wave_waveparticipant_wave_participants.py  0002_wave_waveuser_wave_participants.py  0003_alter_window_window_num.py  0003_remove_user_waves_wave_users.py  0003_rename_addtional_field_waveparticipant_additional_field.py  0003_rename_clent_id_wave_client_id.py  0003_rename_domain_status_domain_domain_last_accessed.py  0003_wave_users.py  0004_alter_domain_domain_fav_icon.py  0004_domain.py  0004_remove_user_waves.py  0004_tab.py  0005_alter_tab_tab_id.py  0005_remove_wave_users_user_waves.py  0005_scroll_scroll_metrics.py  0005_tab_domains.py  0006_alter_wave_start_date_window.py  0006_click.py  0006_domain_tab_domains.py  0007_alter_wave_start_date.py  0007_click.py  0007_scroll.py  0008_alter_window_created_at.py  0008_scroll.py  0009_remove_tab_window.py  0009_remove_user_waves.py  0010_alter_window_user.py  0010_rename_tab_id_tab_tab_num.py  0011_alter_domain_domain_fav_icon_and_more.py  0012_domain_closing_time_domain_start_time.py  0013_domain_snapshot_html.py  0014_remove_tab_snapshot_html.py  0015_category_criteria_url.py  0016_rename_hostname_url_url_hostname.py  0017_host_delete_url.py  (+23 more)
app/core/mixins/: maintenance_mixins.py
app/core/tests/: helpers.py  test_admin.py  test_commands.py  test_maintenance_mixins.py  test_models.py
app/domain/: apps.py  serializers.py  tasks.py  urls.py  views.py
app/domain/tests/: test_click_api.py  test_clicks_api.py  test_domain_api.py  test_pagination.py  test_scroll_api.py
app/globalsession/: apps.py  serializers.py  urls.py  views.py
app/globalsession/tests/: tests_global_session_api.py
app/host/: apps.py  serializers.py  tasks.py  urls.py  views.py
app/host/tests/: test_host_api.py  tests.py
app/scrolls/: apps.py  serializers.py  urls.py  views.py
app/scrolls/tests/: test_scroll_api.py
app/tab/: apps.py  serializers.py  urls.py  views.py
app/tab/tests/: test_click_api.py  test_domains_api.py  test_tab_api.py
app/user/: apps.py  serializers.py  urls.py  views.py
app/window/: apps.py  serializers.py  urls.py  views.py
(+20 files in other folders)
